Cleanup build.gradle.kts